Programación/AppJavaFx/ITV_TEST/src/main/kotlin/errors/OwnerError.kt
package errors

sealed class OwnerError(val message: String) {
    object OwnerNotFound: OwnerError("Error Owner not found")
}